[package]
name = "ghmsg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
cursive = "0.20.0"
dotenvy = "0.15.6"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["macros"] }
